force-app/main/default/objects/Data_Store__c/Data_Store__c.object-meta.xml
<CustomObject>
    <label>Data Store</label>
    <nameField>
        <label>Data Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Store Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>