force-app/main/default/objects/Data_Store__c/fields/Field10__c.field-meta.xml
<CustomField>
    <fullName>Field10__c</fullName>
    <description>Order 10</description>
    <label>Field10</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>