force-app/main/default/objects/Data_Store__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <description>Order 1</description>
    <label>Field1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>