force-app/main/default/objects/Data_Store__c/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <description>Order 2</description>
    <label>Field2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>