force-app/main/default/objects/Data_Store__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>This stores the related object id(or if list of objects, then its parent Id). Eg; quote record Id in case of 20689.</description>
    <label>Related Record Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>