force-app/main/default/objects/Data_Store__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <label>Sequence Number</label>
    <type>AutoNumber</type>
</CustomField>